--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="SHIELD Flood Protection System">
+    <meta name="description" content="SHIELD Flood Protection System Node L2">
     <title>SHIELD Flood Protection System</title>
     <style>
        #compass {
